# python-sdk

./: .gitignore  .venv  =0.7.0  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci-cd.yml  ci.yml  dependabot-auto-merge.yml  publish.yml  receive-spec-update.yml  regenerate-clients.yml  regenerate.yml  release.yml
docs/: source-repo-workflow.yml
examples/: .ruff.toml  README.md  audit_management_showcase.py  audit_runtime_showcase.py  audit_showcase.py  config_management_showcase.py  config_runtime_setup.py  config_runtime_showcase.py  config_showcase.py  flags_demo_setup.py  flags_management_setup.py  flags_management_showcase.py  flags_runtime_setup.py  flags_runtime_showcase.py  jobs_showcase.py  logging_management_showcase.py  logging_runtime_setup.py  logging_runtime_showcase.py  management_showcase.py
examples/setup/: __init__.py  audit_setup.py  config_management_setup.py  config_runtime_setup.py  flags_management_setup.py  flags_runtime_setup.py  jobs_setup.py  logging_management_setup.py  logging_runtime_setup.py
generator/: config.yaml
openapi/: app.json  audit.json  config.json  flags.json  logging.json
programs/: config_showcase.py
scripts/: generate.sh
src/smplkit/: __init__.py  _auth.py  _client.py  _config.py  _context.py  _debug.py  _errors.py  _helpers.py  _metrics.py  _resolve.py  _resolver.py  _transport.py  _ws.py  client.py  clients.py  errors.py
src/smplkit/_generated/: __init__.py
src/smplkit/_generated/app/: __init__.py
src/smplkit/_generated/audit/: __init__.py
src/smplkit/_generated/config/: __init__.py
src/smplkit/_generated/flags/: __init__.py
src/smplkit/_generated/jobs/: __init__.py  client.py
src/smplkit/_generated/logging/: __init__.py
src/smplkit/account/: __init__.py  _client.py  clients.py  models.py
src/smplkit/audit/: __init__.py  _buffer.py  _client.py  _forwarders.py  client.py  clients.py  forwarders.py  models.py
src/smplkit/config/: __init__.py  _client.py  client.py  clients.py  helpers.py  models.py  runtime.py
src/smplkit/flags/: __init__.py  _client.py  client.py  clients.py  helpers.py  models.py  types.py
src/smplkit/jobs/: __init__.py  _client.py  client.py  clients.py
src/smplkit/logging/: __init__.py  _client.py  _discovery.py  _levels.py  _normalize.py  _registration_buffer.py  _resolution.py  _sources.py  client.py  clients.py  helpers.py  models.py  sources.py
src/smplkit/logging/adapters/: __init__.py  base.py  loguru_adapter.py  stdlib_logging.py
src/smplkit/management/: __init__.py  _buffer.py  _client.py  audit.py  client.py  jobs.py  models.py  types.py
src/smplkit/platform/: __init__.py  _client.py  clients.py  models.py  types.py
tests/: conftest.py  test_version.py
tests/unit/: test_audit.py  test_audit_async.py  test_audit_coverage.py  test_audit_distinct_values.py  test_audit_forwarders.py  test_audit_reads.py  test_audit_wire_shape.py  test_client.py  test_config.py  test_debug.py  test_enum_ordering.py  test_error_details.py  test_errors.py  test_generated_imports.py  test_helpers.py  test_metrics.py  test_pagination.py  test_public_module_paths.py  test_resolve.py  test_shared_ws.py  test_singleton_accessors.py  test_top_client.py  test_version.py
tests/unit/account/: test_client.py  test_models.py
tests/unit/audit/: test_forwarders.py
tests/unit/config/: test_client.py  test_discovery.py  test_helpers.py  test_models.py  test_prescriptive.py  test_resolver.py  test_runtime.py  test_websocket.py
tests/unit/flags/: test_cache.py  test_client.py  test_evaluation.py  test_handles.py  test_helpers.py  test_models.py  test_types.py
tests/unit/jobs/: test_jobs.py
tests/unit/logging/: test_adapter_loading.py  test_async_client.py  test_client.py  test_coverage_gaps.py  test_discovery.py  test_helpers.py  test_levels.py  test_normalize.py  test_resolution.py  test_standalone.py  test_sync_extras.py
tests/unit/logging/adapters/: test_base.py  test_loguru_adapter.py  test_stdlib_logging.py
tests/unit/management/: test_audit_distinct_values.py  test_audit_events.py  test_audit_forwarders.py  test_client.py  test_jobs.py  test_models.py  test_top_client.py  test_types.py
tests/unit/platform/: test_client.py  test_models.py  test_types.py
(+756 files in other folders)
