[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smplkit"
version = "0.1.0"
description = "Official Python SDK for the smplkit platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "attrs>=21.3.0",
]

[project.urls]
Homepage = "https://www.smplkit.com"
Documentation = "https://docs.smplkit.com"
Repository = "https://github.com/smplkit/python-sdk"

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.21.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smplkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
